--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,18 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Divvy</title>
+  
+    <meta property="og:title" content="Divvy" />
+    <meta property="og:description" content="Split receipts instantly with friends." />
+    <meta property="og:image" content="https://usedivvy.app/divvy_logo.png" />
+    <meta property="og:url" content="https://usedivvy.app" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Divvy" />
+    <meta name="twitter:description" content="Split receipts instantly with friends." />
+    <meta name="twitter:image" content="https://usedivvy.app/divvy_logo.png" />
+
   </head>
   <body>
     <div id="root"></div>
