--- a/client/index.html
+++ b/client/index.html
@@ -8,14 +8,14 @@
     
     <meta property="og:title" content="Divvy" />
     <meta property="og:description" content="Split receipts instantly with friends." />
-    <meta property="og:image" content="https://divvy-psi.vercel.app/divvy_logo.png" />
+    <meta property="og:image" content="https://divvy-psi.vercel.app/divvy_logo_512.png" />
     <meta property="og:url" content="https://divvy-psi.vercel.app" />
     <meta property="og:type" content="website" />
 
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Divvy" />
     <meta name="twitter:description" content="Split receipts instantly with friends." />
-    <meta name="twitter:image" content="https://divvy-psi.vercel.app/divvy_logo.png" />
+    <meta name="twitter:image" content="https://divvy-psi.vercel.app/divvy_logo_512.png" />
 
   </head>
   <body>
